plugin product demo link install uninstall with db, localstring resource, shwing section in product page done

--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/CreateOrUpdate.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/CreateOrUpdate.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ProductDemoModel
 
-<nop-card asp-name="product-demolink" asp-icon="fas fa-truck" asp-title="@T("Plugins.Misc.ProductDemoLink.Title")" asp-hide-block-attribute-name="ProductDemoLink.HideProductBlock" asp-hide="false" asp-advanced="false">
+<nop-card asp-name="product-demolink" asp-icon="fas fa-truck" asp-title="@T("Plugins.Misc.ProductLiveButton.Title")" asp-hide-block-attribute-name="ProductLiveButton.HideProductBlock" asp-hide="false" asp-advanced="false">
     <div class="card-body">
         <div class="card card-default no-margin">
             <div class="card-header">
-                @T("Plugins.Misc.ProductDemoLink.Title")
+                @T("Plugins.Misc.ProductLiveButton.Title")
             </div>
             <div class="card-body">
                 <div class="form-group row" id="pdlDemoLink">
