--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/_ViewImports.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/_ViewImports.cshtml
@@ -43,4 +43,4 @@
 @using Nop.Web.Models.Sitemap
 @using Nop.Web.Models.Topics
 @using Nop.Web.Models.Vendors
-@using Nop.Plugin.Misc.ProductDemoLink.Models
+@using Nop.Plugin.Misc.ProductLiveButton.Models
