--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/_ViewImports.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/_ViewImports.cshtml
@@ -44,3 +44,4 @@
 @using Nop.Web.Models.Topics
 @using Nop.Web.Models.Vendors
 @using Nop.Plugin.Misc.ProductLiveButton.Models
+@using Nop.Web.Areas.Admin.Components
