live preview in new page done

--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/PublicInfoProductPage.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/PublicInfoProductPage.cshtml
@@ -31,7 +31,9 @@
 
         })
         function goToDemoPage(link) {
-            window.open(link, '_blank');
+            var baseUrl = '@Url.Action("PreviewDemo", "ProductLiveButtonPublic")';
+            var fullUrl = baseUrl + '?link=' + link;
+            window.open(fullUrl, '_blank');
         }
     </script>
 }
