--- a/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/PublicInfoProductPage.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.ProductLiveButton/Views/PublicInfoProductPage.cshtml
@@ -14,6 +14,32 @@
         font-size: 15px;
         color: @Model.Settings.ButtonTextColor;
     }
+
+    .product-type-3 .item-inner .btn-action.add-to-cart {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+        height: 39px;
+        opacity: .8;
+        display: block;
+        text-align: center;
+        line-height: 38px;
+        font-size: 1.3rem;
+        text-transform: uppercase;
+        white-space: nowrap;
+        letter-spacing: .3px;
+        width: 100%;
+        border: none;
+        transition: all 0.3s ease 0s, color 0.1s ease 0s;
+        -webkit-transition: all 0.3s ease 0s, color 0.1s ease 0s;
+        -moz-transition: all 0.3s ease 0s, color 0.1s ease 0s;
+        -webkit-transform: translateY(103%) translateZ(0);
+        transform: translateY(103%) translateZ(0);
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    }
 </style>
 @if (Model.ProductDemoModel.DemoLink != null && Model.ProductDemoModel.DemoLink != string.Empty)
 {
