vendor registraion list load with datatable

--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Views/RegistrationPageView.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Views/RegistrationPageView.cshtml
@@ -16,11 +16,11 @@
                 <label for="account-type">@T("Plugins.Misc.NopHunter.VendorRegistration.Field.AccountType"):</label>
                 <div id="account-type" class="gender">
                     <span class="customer">
-                        <input type="radio" value="C" disabled id="account-type-customer" name="AccountType" />
+                        <input type="radio" value="C" id="account-type-customer" name="AccountType" />
                         <label class="forcheckbox" for="account-type-customer">@T("Plugins.Misc.NopHunter.VendorRegistration.Field.AccountType.Customer")</label>
                     </span>
                     <span class="vendor">
-                        <input type="radio" value="V" disabled checked id="account-type-vendor" name="AccountType" />
+                        <input type="radio" value="V" checked id="account-type-vendor" name="AccountType" />
                         <label class="forcheckbox" for="account-type-vendor">@T("Plugins.Misc.NopHunter.VendorRegistration.Field.AccountType.Vendor")</label>
                     </span>
                 </div>
