--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Views/_ViewImports.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@inherits Nop.Web.Framework.Mvc.Razor.NopRazorPage<TModel>
 
+@inject IGenericAttributeService genericAttributeService
 @inject INopHtmlHelper NopHtml
+@inject IWorkContext workContext
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @*we remove the default InputTagHelper to prevent the checkbox duplicating: https://stackoverflow.com/questions/42544961/asp-net-core-custom-input-tag-helper-rendering-duplicate-checkboxes*@
@@ -13,6 +15,8 @@
 @using Microsoft.AspNetCore.StaticFiles
 @using Microsoft.Extensions.Primitives
 @using static Nop.Services.Common.NopLinksDefaults
+@using Nop.Core
+@using Nop.Services.Common
 @using Nop.Web.Components
 @using Nop.Web.Extensions
 @using Nop.Web.Framework
@@ -45,3 +49,5 @@
 @using Nop.Web.Models.Vendors
 @using Nop.Plugin.Misc.VendorRegistration.Models
 @using Nop.Web.Areas.Admin.Components
+@using Nop.Web.Areas.Admin.Models.Vendors
+@using Nop.Web.Framework.Models.DataTables
