--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Views/_ViewImports.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.VendorRegistration/Views/_ViewImports.cshtml
@@ -47,7 +47,7 @@
 @using Nop.Web.Models.Sitemap
 @using Nop.Web.Models.Topics
 @using Nop.Web.Models.Vendors
-@using Nop.Plugin.Misc.VendorRegistration.Models
+@using Nop.Plugin.Misc.NopHunter.VendorRegistration.Models
 @using Nop.Web.Areas.Admin.Components
 @using Nop.Web.Areas.Admin.Models.Vendors
 @using Nop.Web.Framework.Models.DataTables
